2014-01-07  Bastien Guerry  <bzg@gnu.org>

	* minibuffer.el (completion--try-word-completion): When both a
	hyphen and a space are possible candidates for the character
	following a word, display both candidates.  (Bug#15980)

2014-01-07  Martin Rudalics  <rudalics@gmx.at>

	* window.el (balance-windows-2): While rounding don't give a
	window more than the remainder.  Bug#16351, Bug#16383.

2014-01-07  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-help-extra-packages): Remove.
	(menu-bar-help-menu): Use view-external-packages instead.

2014-01-07  Bastien Guerry  <bzg@gnu.org>

	* emacs-lisp/package.el (package-delete): Also delete the package
	name from `package-alist', not its description only.

2014-01-07  Glenn Morris  <rgm@gnu.org>

	* help.el (view-external-packages):
	* menu-bar.el (menu-bar-help-extra-packages):
	Visit efaq.info rather than etc/MORE.STUFF.

2014-01-07  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-mode-map): Bind [return] and [backspace] to
	isearch-exit and isearch-delete-char resp.  (Bug#16342, bug#16035)

	* progmodes/ps-mode.el (ps-mode-map): Remove [return] key binding
	that shadows RET.  (Bug#16342)

2014-01-07  Chong Yidong  <cyd@gnu.org>

	* isearch.el (isearch-yank-char, isearch-yank-word)
	(isearch-yank-line): Doc fix.

2014-01-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* abbrev.el (define-abbrev): Beware new meaning of fboundp.
	* emacs-lisp/elint.el (elint-find-builtins):
	* emacs-lisp/eldoc.el (eldoc-symbol-function):
	* emacs-lisp/bytecomp.el (byte-compile-callargs-warn)
	(byte-compile-file-form-defmumble, byte-compile, byte-compile-form):
	* emacs-lisp/byte-opt.el (byte-compile-inline-expand):
	* apropos.el (apropos-safe-documentation):
	* subr.el (symbol-file): Remove redundant fboundp.
	* progmodes/idlw-shell.el (idlwave-shell-comint-filter): Use defalias.

2014-01-06  Bastien Guerry  <bzg@gnu.org>

	* hl-line.el (global-hl-line-overlay): Make a local variable.